SigmaCodebackup3rdSep/objects/Sublevel_location__c.object
<CustomObject>
    <fields>
        <fullName>Bar_Code__c</fullName>
        <label>Bar Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Sublevel-locations</relationshipLabel>
        <relationshipName>Sublevel_locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Active__c</field>
                <operation>equals</operation>
                <value>Yes</value>
            </filterItems>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sublevel-locations</relationshipLabel>
        <relationshipName>Sublevel_locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Usage_Type__c</fullName>
        <label>Usage Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dry Storage</fullName>
                </value>
                <value>
                    <fullName>Flammable Liquids</fullName>
                </value>
                <value>
                    <fullName>Refrigerated Zone</fullName>
                </value>
                <value>
                    <fullName>Dangerous Goods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sublevel_location__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Zone</value>
            </filterItems>
            <filterItems>
                <field>Sublevel_location__c.Inventory_Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.Inventory_Location__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Sublevel locations</relationshipLabel>
        <relationshipName>Zone_Sublevel_locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sublevel-location</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sublevel-locations</pluralLabel>
    <recordTypes>
        <fullName>Bin</fullName>
        <active>true</active>
        <label>Bin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Zones</fullName>
        <active>true</active>
        <label>Zone</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>UniqueNameValidation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS(
VLOOKUP(
$ObjectType.Sublevel_location__c.Fields.Name ,
$ObjectType.Sublevel_location__c.Fields.Name, Name
),
Name
),
OR(
ISNEW(), ISCHANGED(Name)
)
)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Duplicate name is not allowed</errorMessage>
    </validationRules>
</CustomObject>